--- a/CryptoPortfolioTracker.csproj
+++ b/CryptoPortfolioTracker.csproj
@@ -268,6 +268,9 @@
     <Content Update="Assets\Splash_Image_1000x565.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Update="Assets\usdc.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Update="Assets\Wallet_Minus.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
