--- a/CryptoPortfolioTracker.csproj
+++ b/CryptoPortfolioTracker.csproj
@@ -57,6 +57,7 @@
     <None Remove="Controls\AssetTransactionsListViewControl.xaml" />
     <None Remove="Controls\AutoSuggestBoxWithValidation.xaml" />
     <None Remove="Controls\ColumnHeaderButton.xaml" />
+    <None Remove="Controls\PriceLevelsListViewControl.xaml" />
     <None Remove="Dialogs\AboutDialog.xaml" />
     <None Remove="Dialogs\AccountDialog.xaml" />
     <None Remove="Controls\AccountsListViewControl.xaml" />
@@ -69,8 +70,9 @@
     <None Remove="LogWindow.xaml" />
     <None Remove="MK_Styles.xaml" />
     <None Remove="SplashScreen.xaml" />
-    <None Remove="Views\DashBoardView.xaml" />
+    <None Remove="Views\DashboardView.xaml" />
     <None Remove="Views\GraphicView.xaml" />
+    <None Remove="Views\PriceLevelsView.xaml" />
     <None Remove="Views\SettingsView.xaml" />
   </ItemGroup>
   <ItemGroup>
@@ -321,7 +323,13 @@
     <None Update="Assets\CPT256x256Icon.altform-unplated_targetsize-48.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <Page Update="Views\DashBoardView.xaml">
+    <Page Update="Views\PriceLevelsView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Update="Controls\PriceLevelsListViewControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Update="Views\DashboardView.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Update="Dialogs\AboutDialog.xaml">
